alignment issues

--- a/blocks/dealer-locator/dealer-locator.css
+++ b/blocks/dealer-locator/dealer-locator.css
@@ -466,7 +466,8 @@ main .section.dealer-locator-container > div {
     font-size: 10px;
     color: #000;
     font-weight: 700;
-    margin-top: 10px
+    margin-top: 10px;
+    max-width: 320px;
 }
 
 .dealer-locator .nearby-pins article.teaser .teaser-bottom {
@@ -510,6 +511,14 @@ main .section.dealer-locator-container > div {
 
     .dealer-locator .nearby-pins article.teaser .teaser-bottom .left .call:hover,.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .direction:hover,.dealer-locator .nearby-pins article.teaser .teaser-bottom .left .more:hover,.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .call:hover,.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .direction:hover,.dealer-locator .nearby-pins article.teaser .teaser-bottom .right .more:hover {
         background: 0 0
+    }
+
+    .dealer-locator .nearby-pins article.teaser .teaser-top .heading p {
+        max-width: unset;
+    }
+
+    .dealer-locator .nearby-pins article.teaser .teaser-top .left {
+        max-width: unset;
     }
 }
 
